--- a/app/src/main/res/layout/activity_customer_order.xml
+++ b/app/src/main/res/layout/activity_customer_order.xml
@@ -1,26 +1,49 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:background="#FFF8F0">
+    android:background="@drawable/bgdashboard"
+    android:padding="8dp">
 
-    <!-- JUDUL -->
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/tvTitleOrder"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Pesanan Saya"
-        android:textSize="22sp"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#6F4E37"
         android:gravity="center"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- LIST PESANAN -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCustomerOrders"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/recyclerOrder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:clipToPadding="false"
-        android:paddingBottom="8dp"/>
-</LinearLayout>
+        android:paddingBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitleOrder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tvEmptyOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Belum ada pesanan"
+        android:textColor="#AAAAAA"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
