--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -25,38 +25,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
+            android:layout_marginBottom="24dp"
             android:background="#FFFFFF"
-            android:layout_marginBottom="24dp">
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <TextView
                 android:id="@+id/tvCustomer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Customer : -"
-                android:textSize="18sp"
-                android:textStyle="bold"
                 android:textColor="#6F4E37"
-                android:layout_marginBottom="8dp"/>
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Total : Rp 0"
-                android:textSize="18sp"
                 android:textColor="#5D4037"
-                android:layout_marginBottom="8dp"/>
+                android:textSize="18sp" />
+
 
             <TextView
                 android:id="@+id/tvStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Status : Menunggu"
+                android:textColor="#FB8C00"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="#FB8C00"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- TOMBOL AKSI -->
